@@ -38,6 +38,7 @@ Vicente Solsona Dellá
 BUG HUNTERS/SUGGESTIONS
 
 Bob Broadus
+Darius Blasband
 Donald Axel
 Erlend Aasland
 Trevor Bača
