@@ -1,0 +1,13 @@
+\version "2.7.8"
+
+\header {
+
+  texidoc = "A single pango string is considered to have one
+direction.  The hebrew in this example (including punctuation) is set
+right-to-left, with the first word (containing 1) on the right."
+
+}
+
+\markup {
+ "לל1ללל, רר2רר."
+}
