@@ -27,11 +27,10 @@ class Pango_font : public Font_metric
   Real scale_;
   Real output_scale_;
   SCM physical_font_tab_;
-
+  Direction text_direction_; 
 public:
   SCM physical_font_tab () const;
   Pango_font (PangoFT2FontMap *,
-	      Direction leftright,
 	      PangoFontDescription *,
 	      Real);
   ~Pango_font ();
@@ -39,7 +38,7 @@ public:
   SCM font_file_name () const;
   void register_font_file (String, String);
   Stencil text_stencil (String) const;
-  Stencil pango_item_string_stencil (PangoItem *, String) const;
+  Stencil pango_item_string_stencil (PangoItem const *, String) const;
 
   virtual void derived_mark () const;
 };
